--- a/WebsiteLayout.html
+++ b/WebsiteLayout.html
@@ -23,6 +23,7 @@
     <img src="img/HEHE.jpg" alt="Pug Banner Image">
   </div>
 
+  
   <div id="main-content">
   <section class="About" id="About"></section>
     <article>
@@ -41,6 +42,7 @@
       <li><a href="https://damaso-nd12.github.io/RESTAURANT_Damaso/RESTAURANT%20SHEESH.html">Restaurant Page</a></li>
       <li><a href="https://damaso-nd12.github.io/HUMMUS_Damaso/HUMMUS_Damaso.html">Hummus</a></li>
     </ul>
+    <center><img src="img/pic.jpg" alt-img width=500 height=500 style="display: block; margin: 0 auto; border-radius: 60%;"></center>
   </aside>
 
   <aside id="sidebar1">
